fixing wishlist page to align with styling

--- a/src/Pages/WishListPage/WishListPage.css
+++ b/src/Pages/WishListPage/WishListPage.css
@@ -3,6 +3,11 @@
     transition: background-color 200ms ease-in-out;
     border: 1px solid white;
     border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    gap: 10px;
 }
 
 .wishlist_page li:hover {
@@ -17,12 +22,4 @@
 .book_image {
     width: 50px;
     height: 100px;
-}
-
-.book_entry {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
-    gap: 10px;
 }
